2008-03-06  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/details.cc (spd_set_page_widget): Don't use g_return_if_fail
	as if it were an "if (...) return" statement.

	* src/main.h (get_package_info): Changed the name of a param, to
	be more coherent with its new meaning: only_basic_info.

	* src/main.cc (get_package_info): Don't call to the apt-worker when
	the info was already retrieved or when only_basic_info is TRUE.
	(struct gpis_closure): Changed the name of only_installable_info
	to only_basic_info, to keep everything coherent.
	(get_package_infos): Likewise.

	* src/operations.cc (up_confirm): Removed, and copied its code
	into uninstall_package, as asking for the info is not needed.
	(uninstall_package): Already explained.

2008-03-05  Mario Sanchez Prada  <msanchez@maemo.org>

	Finished changes to finally fix the 'flickering' effect with the
	package details dialog.

	* src/details.cc (add_table_field): Removed this function to
	refactor its logic into the add_table_field_and_value function.
	(add_table_field_and_value): Renamed again into add_table_field,
	and made that it allows, from now on, to set either the 'field'
	and the 'value' fields at the same time, or just the 'field' field
	passing NULL as the 'value' parameter. Updated callers.
	(struct spd_clos): Added two fields, 'table' and 'spd_nb_widgets',
	to keep track of the GtkTable in the first notebook page, as well
	as to de-globalize the list of child widgets, added yesterday.
	(spd_nb_widgets): De-globalized, as it was explained above.
	(show_package_details): Initialize the new spd_clos fields.
	(spd_create_common_page): Show the updating banner here, and make
	it to just create the common page child widget for the firs time,
	that is, creating a GtkTable with text only in the first column.
	(spd_update_common_page): New function that will take care of just
	updating the GtkTable created with spd_create_common_page. This
	way, we avoid the 'flickering' effect since the table is reused